Progression dans la refonte

--- a/src/app/components/admin/cube-stalker/request/request.component.html
+++ b/src/app/components/admin/cube-stalker/request/request.component.html
@@ -69,4 +69,7 @@
     </div>
   </ng-template>
 </p-card>
-<p-confirmDialog appendTo="body" [dismissableMask]="true" />
+<p-confirmDialog
+  key="card-request-dialog"
+  appendTo="body"
+  [dismissableMask]="true" />
