--- a/src/app/components/profil/carte-cube-stalker/carte-cube-stalker.component.html
+++ b/src/app/components/profil/carte-cube-stalker/carte-cube-stalker.component.html
@@ -149,4 +149,7 @@
     </ng-template>
   </ng-container>
 </p-card>
-<p-confirmDialog appendTo="body" [dismissableMask]="true" />
+<p-confirmDialog
+  key="card-confirm-dialog"
+  appendTo="body"
+  [dismissableMask]="true" />
