--- a/src/app/components/admin/messages-anniversaire/messages-anniversaire.component.html
+++ b/src/app/components/admin/messages-anniversaire/messages-anniversaire.component.html
@@ -117,4 +117,7 @@
     </tr>
   </ng-template>
 </p-table>
-<p-confirmDialog appendTo="body" [dismissableMask]="true" />
+<p-confirmDialog
+  key="delete-message-dialog"
+  appendTo="body"
+  [dismissableMask]="true" />
