--- a/src/app/components/agent/reaction/reaction.component.html
+++ b/src/app/components/agent/reaction/reaction.component.html
@@ -14,6 +14,8 @@
         [filter]="true"
         filterBy="name"
         styleClass="w-full"
+        [loading]="loadingChannels"
+        [disabled]="loadingChannels"
         (onChange)="onChannelChange()">
         <ng-template pTemplate="selectedItem" let-channel>
           <div class="flex items-center gap-x-2">
@@ -76,12 +78,12 @@
       </p-dropdown>
     </div>
     <div class="flex flex-col w-full gap-y-2">
-        <label for="message">Réaction</label>
-        <app-em-emoji-picker
-            [(value)]="selectedEmoji"
-            [updatePreview]="true"
-            (onEmoji)="onEmoji($event)"
-            styleClass="emoji-overlay" />
+      <label for="message">Réaction</label>
+      <app-em-emoji-picker
+        [(value)]="selectedEmoji"
+        [updatePreview]="true"
+        (onEmoji)="onEmoji($event)"
+        styleClass="emoji-overlay" />
     </div>
   </div>
   <div class="flex mt-6">
