--- a/src/app/components/admin/messages-anniversaire/edit-dialog/edit-dialog.component.html
+++ b/src/app/components/admin/messages-anniversaire/edit-dialog/edit-dialog.component.html
@@ -2,8 +2,8 @@
   <textarea
     #ta
     rows="5"
-    pInputTextarea
-    [autoResize]="true"
+    pTextarea
+    autoResize="true"
     [(ngModel)]="message"
     (selectionchange)="onSelectionChange($event)"
     (input)="onChange($event)"
