--- a/src/app/components/agent/reaction/reaction.component.html
+++ b/src/app/components/agent/reaction/reaction.component.html
@@ -2,7 +2,7 @@
   <div class="flex flex-col gap-y-4">
     <div class="flex flex-col w-full gap-y-2">
       <label for="channel">Salon</label>
-      <p-dropdown
+      <p-select
         id="channel"
         [options]="guildChannels"
         [(ngModel)]="selectedChannel"
@@ -17,28 +17,28 @@
         [loading]="loadingChannels"
         [disabled]="loadingChannels"
         (onChange)="onChannelChange()">
-        <ng-template pTemplate="selectedItem" let-channel>
+        <ng-template #selectedItem let-channel>
           <div class="flex items-center gap-x-2">
             <span class="pi pi-hashtag" *ngIf="channel.type === 0"></span>
             <span class="pi pi-volume-up" *ngIf="channel.type === 2"></span>
             <span>{{ channel.name }}</span>
           </div>
         </ng-template>
-        <ng-template pTemplate="group" let-channelCategory>
+        <ng-template #group let-channelCategory>
           <span>{{ channelCategory.name }}</span>
         </ng-template>
-        <ng-template pTemplate="item" let-channel>
+        <ng-template #item let-channel>
           <div class="flex items-center gap-x-2">
             <span class="pi pi-hashtag" *ngIf="channel.type === 0"></span>
             <span class="pi pi-volume-up" *ngIf="channel.type === 2"></span>
             <span>{{ channel.name }}</span>
           </div>
         </ng-template>
-      </p-dropdown>
+      </p-select>
     </div>
     <div class="flex flex-col w-full gap-y-2">
       <label for="message">Message</label>
-      <p-dropdown
+      <p-select
         [options]="channelMessages"
         [(ngModel)]="selectedMessage"
         placeholder="Sélectionnez un message ou entrez son identifiant"
@@ -53,10 +53,10 @@
         (onChange)="onMessageChange()"
         [loading]="loadingMessages"
         [disabled]="messagesDisabled">
-        <ng-template pTemplate="selectedItem" let-message>
+        <ng-template #selectedItem let-message>
           <span>{{ message.value }}</span>
         </ng-template>
-        <ng-template pTemplate="item" let-message>
+        <ng-template #item let-message>
           <div class="flex gap-x-4 min-w-full max-w-min">
             <p-avatar
               [image]="message.author.avatar"
@@ -75,7 +75,7 @@
             </div>
           </div>
         </ng-template>
-      </p-dropdown>
+      </p-select>
     </div>
     <div class="flex flex-col w-full gap-y-2">
       <label for="message">Réaction</label>
