--- a/src/app/components/not-bsfr-member/not-bsfr-member.component.html
+++ b/src/app/components/not-bsfr-member/not-bsfr-member.component.html
@@ -1,4 +1,5 @@
-<p-messages
-  [(value)]="notBSFRMessage"
-  [enableService]="false"
+<p-message
+  [severity]="notBSFRMessage.severity"
+  [text]="notBSFRMessage.text"
+  [icon]="notBSFRMessage.icon"
   [escape]="false" />
