--- a/src/app/components/profil/twitch/twitch.component.html
+++ b/src/app/components/profil/twitch/twitch.component.html
@@ -1,8 +1,8 @@
 <p-card styleClass="bg-transparent">
-  <p-messages
-    [enableService]="false"
-    [value]="helpMessage"
-    escape="false"
+  <p-message
+    severity="info"
+    text="Indiquer le nom votre chaîne Twitch afin qu'une notification soit envoyée sur le serveur pour prévenir que vous êtes en live."
+    icon="pi pi-info-circle"
     [showTransitionOptions]="'0ms'"
     styleClass="mb-6" />
 
