--- a/src/app/components/profil/ville/ville.component.html
+++ b/src/app/components/profil/ville/ville.component.html
@@ -1,22 +1,10 @@
 <p-card styleClass="bg-transparent">
-  <p-messages
-    closable="false"
-    severity="info"
-    [enableService]="false"
-    [value]="helpMessage"
-    styleClass="mb-6">
-    <ng-template pTemplate="content">
-      <span class="p-message-icon">
-        <span class="pi pi-info-circle"></span>
-      </span>
-      <div class="block p-message-detail">
-        Indiquer votre ville afin de pouvoir apparaître sur la
-        <a href="#" (click)="navigateToInteractiveMap($event)"
-          >carte interactive</a
-        >.
-      </div>
-    </ng-template>
-  </p-messages>
+  <p-message severity="info" icon="pi pi-info-circle" styleClass="mb-6">
+    Indiquer votre ville afin de pouvoir apparaître sur la
+    <a href="#" (click)="navigateToInteractiveMap($event)" class="!underline"
+      >carte interactive</a
+    >.
+  </p-message>
 
   <label for="city" class="font-bold block mb-2">Votre ville</label>
 
