--- a/src/app/components/accueil/accueil.component.html
+++ b/src/app/components/accueil/accueil.component.html
@@ -18,7 +18,7 @@
         <a pButton pRipple (click)="comming()">
           <span
             [innerHTML]="icons.download | svg"
-            class="flex items-center me-3"></span>
+            class="flex items-center"></span>
           {{ file.name }}
         </a>
       </div>
