--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,8 +2,6 @@
 @layer tailwind-base, primeng, tailwind-utilities;
 
 /* Primeng Settings */
-@import 'primeng/resources/primeng.css';
-@import 'primeng/resources/themes/aura-dark-blue/theme.css';
 @import 'primeicons/primeicons.css';
 
 /* Leaflet */
@@ -20,6 +18,9 @@
 
 html {
     font-size: 14px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+        Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
+        'Segoe UI Symbol';
 }
 
 body {
@@ -30,6 +31,8 @@ body {
     background-size: cover;
     background-attachment: fixed;
     background-position-x: center;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 a:not(.p-menuitem-link),
@@ -118,34 +121,18 @@ a:not(.p-menuitem-link):visited {
     color: var(--text-color);
 }
 
-.p-tabmenu .p-tabmenu-nav,
-.p-tabview .p-tabview-nav,
-.p-tabmenu .p-tabmenu-nav .p-tabmenuitem .p-menuitem-link,
-.p-tabview .p-tabview-nav li .p-tabview-nav-link,
-.p-tabview .p-tabview-panels {
+.p-tablist .p-tablist-tab-list {
     background: none;
 }
 
-.p-tabmenu .p-tabmenu-nav .p-tabmenuitem:not(.p-highlight) .p-menuitem-link,
-.p-tabmenu
-    .p-tabmenu-nav
-    .p-tabmenuitem:not(.p-highlight)
-    .p-menuitem-link:visited {
-    color: #a1a1aa;
-}
-
-.p-tabview .p-tabview-nav .pi {
+.p-tablist .p-tab .pi {
     display: flex;
     align-items: center;
 }
 
-.p-tabview .p-tabview-nav .pi::before {
+.p-tablist .p-tab .pi::before {
     font-size: 16px;
-    padding: 1px;
-}
-
-.p-tabview .p-tabview-nav-btn.p-link {
-    background: rgba(24, 24, 27, 0.5);
+    padding: 2px;
 }
 
 .p-paginator {
